# environment-monitor

./: .gitignore  README.md  Raspberry-Arduino-Interface.md  environment-logger-v2.py  environment-logger.py  package.json  temp.db  tempsimulation.py  test.py
backend/: Program.cs  backend.sln  c#.cs  control_lamp.py  database.ini  database.py  environment-logger-main.py  environment-logger-v2.py  main.py  read_temp.py  temp.db  temperature-logger-main.py  test.py  testgui.py
backend/node-postgres/: index.js  package.json  queries.js  temperature_model.js
backend/rust/: Cargo.toml
backend/rust/src/: main.rs
frontend/: README.md  package-lock.json  package.json
frontend/src/: App.js
frontend/src/components/: Header.js  LineChart.js  MyChart.js
frontend/src/utils/: Data.js
heating-controller/: control_lamp.py  subscriber.py
node-postgres-API/: package-lock.json  package.json
rust/: Cargo.toml
rust/src/: control_lamp.rs  ds18b20.rs  main.rs  w1_errors.rs
server-api/node-postgres/: package-lock.json
simulation/: tempsimulation.py
temperature-sensor/: database.py  main.py  read_temp.py
tempsimulation/: Cargo.toml
tempsimulation/src/: main.rs
webapp/: package-lock.json
webapp2/: package-lock.json  package.json
webapp2/src/: App.js
webpage/: package-lock.json
webpage/src/: App.js
webpage/src/components/: LineChart.js
